Bug#56537: parse error in sql_yacc.cc in next-mr (compile-pentium-debug, configure+make)

Sql_cmd changed in mysql-next-mr, requiring a sql_command_code function
that was missing when compiling without support for partitioning.

Added it also when compiling without partitioning